<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learning</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="prefTitle">My Preferences</string>
    <string name="prefSummary">Set Flight Option Preferences</string>
    <string name="flight_sort_option_default_value">1</string>
    <string name="dialogTitle">Choose Flight Options</string>
    <string name="listSummary">Set Search Options</string>
    <string name="listTitle">Flight Options</string>
    <string name="selected_flight_sort_option">selected_flight_sort_option</string>
    <string name="menu_prefs_title">Settings</string>
    
    
    <string name="username">Username or email</string>
    <string name="password">Password</string>
	<string name="forget_password">Forget password</string>
</resources>