<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_bg"
    android:gravity="center"
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">"

        <ImageView
            android:id="@+id/imageViewSignUpLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sign_line" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageViewSignUpLine"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/sign_input1"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:padding="10dp"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/username"
            android:layout_below="@id/username"
            android:layout_marginTop="0dp"
            android:background="@drawable/sign_input2"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnSignUp_InLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/password"
            android:layout_below="@+id/password"
            android:layout_marginTop="5dp"
            android:background="@drawable/custombtn_singup"
            android:padding="0dp"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnSignUp_InLogin"
            android:layout_alignBottom="@+id/btnSignUp_InLogin"
            android:layout_alignRight="@+id/password"
            android:layout_marginRight="0dp"
            android:background="@drawable/custombtn_normal_login"
            android:gravity="center"
            android:padding="0dp"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/txtForgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnSignUp_InLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:src="@drawable/sign_logo" />

</LinearLayout>